# battleship

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  assignment.md  docker-compose.yaml  pyproject.toml  ruff.toml
src/: handlers.py  main.py
src/api/v1/: routes.py
src/core/: board.py  config.py  coordinate.py  exceptions.py  game.py  logging.py  settings.py  ship.py  state.py  transitions.py  types.py
src/core/board/: board.py  placement.py  placement_factory.py  random_placement.py
src/core/ships/: fleet_factory.py  ship_shape.py  ship_shapes.py
src/debug/: board_view.py  debugger.py  dto.py
src/models/: dto.py
src/services/: dependencies.py  game_service.py
test/: conftest.py
test/api/v1/: test_api.py
test/core/: test_board.py
test/core/board/: test_random_placement.py
test/services/: test_game_service.py  test_race_condition.py
